@@ -41,6 +41,7 @@ v30.0.00
         Timetable: added staff duty and activity names to Staff Coverage layer on the timetable
 
     Bug Fixes
+        System: fixed toggle field direction for right-to-left languages
         Messenger: fixed missing From address on emails when using the Add Recipient action in Send Report
 
     Deprecations
